<resources>
    <string name="app_name">Marvel</string>
    <string name="title_activity_main">Marvel</string>
    <string name="title_main_drawer_open">Open main drawer</string>
    <string name="title_main_drawer_close">Close main drawer</string>
    <string name="title_action_settings">Settings</string>
    <string name="title_titanic_teams">Titanic Teams</string>
    <string name="title_bring_on_the_bad_guys">Bring On The Bad Guys</string>
    <string name="title_women_of_marvel">Women Of Marvel</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_list_save">List Save</string>
    <string name="title_menu_search">Search</string>
    <string name="title_description">Description</string>
    <string name="title_id">ID</string>
    <string name="title_name">Name</string>
    <string name="title_loading">Loading...</string>
    <string name="title_names"><b>"Name: "</b></string>
    <string name="title_descriptons"><b>Description: </b></string>
    <string name="title_modified"><b>Modified: </b></string>
    <string name="title_ids"><b>ID: </b></string>
    <string name="title_error">Error!</string>
    <string name="error_no_network_connection">Error No NetWork Connection!</string>
    <string name="msg_add_to_favorite">Added to favorite</string>
</resources>