<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    xmlns:car_view="http://schemas.android.com/apk/res-auto"
                                    android:layout_margin="@dimen/dp_10"
                                    car_view:cardCornerRadius="@dimen/dp_5"
                                    car_view:cardElevation="@dimen/dp_5"
                                    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/item_something"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_icon_custom"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:textStyle="bold"
                android:textColor="@color/color_white"
                android:src="@mipmap/ic_marvel"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:paddingLeft="@dimen/dp_10"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_id"
                android:text="@string/title_id"/>

            <TextView
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_name"
                android:text="@string/title_name"/>

            <TextView
                android:layout_marginTop="@dimen/dp_5"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_description"
                android:text="@string/title_description"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>